--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
     
     <section id="home" class="threeD-effect">
         <h2>About Me</h2>
-        <p>Hi, I'm a fresher passionate about Software Development, Web Development, and Software Testing.</p>
+        <p>Hi there! I'm Karunakar — a passionate Computer Science graduate eager to dive into the world of Software Development, Web Development, and Software Testing.
+I love building clean, responsive web applications and enjoy exploring new technologies in the front-end and back-end space. I’m always looking to learn, grow, and collaborate on exciting projects that solve real-world problems.</p>
     </section>
     
     <section id="skills" class="threeD-effect">
